# android_ui_collector

./: README.md  SERVER_README.md  adb.py  gui.py  pyproject.toml  server.py  start_server.py
uploads/: 20250801_013254_452_annotations.json  20250801_013254_452_center_points.json  20250801_013318_428_annotations.json  20250801_013318_428_center_points.json  20250801_013405_032_annotations.json  20250801_013405_032_center_points.json
