[project]
name = "android-screenshot-annotation-tool"
version = "0.2.0"
description = "A comprehensive tool for collecting and annotating Android UI screenshots with PyQt5 GUI and FastAPI upload server"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "johnmalek312", email = ""}
]
keywords = ["android", "screenshots", "annotation", "ui", "testing", "computer-vision"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers", 
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Testing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Multimedia :: Graphics :: Capture :: Screen Capture"
]
dependencies = [
    "adbutils>=2.9.3",
    "PyQt5>=5.15.9",
    "requests>=2.31.0",
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "typing-extensions>=4.0.0"
]

[project.optional-dependencies]
server = [
    "fastapi>=0.104.1",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6"
]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0"
]

[project.urls]
Homepage = "https://github.com/johnmalek312/android_ui_collector"
Repository = "https://github.com/johnmalek312/android_ui_collector"
Issues = "https://github.com/johnmalek312/android_ui_collector/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
exclude = [
    "__pycache__",
    "*.pyc",
    ".venv",
    "uploads",
    ".git"
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
